--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,128 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @source './**/*.{ts,tsx,js,jsx,css,scss}';
 
 @theme {
-  /* --color-primary: #2563eb;
-  --color-accent: #f97316;
+  /* 🔥 RESET ALL DEFAULT COLORS */
+  --color-*: initial;
 
-  --radius-md: 0.5rem;
+  /* ---------- BASE COLORS ---------- */
+  /* --color-50: #F2F2F2;
+  --color-100: #DBDBDB;
+  --color-200: #C4C4C4;
+  --color-300: #ADADAD;
+  --color-400: #969696;
+  --color-500: #808080;
+  --color-600: #696969;
+  --color-700: #525252;
+  --color-800: #3B3B3B;
+  --color-900: #242424;
+  --color-950: #0D0D0D; */
 
-  --motion-fast: 150ms; */
+  --color-25: #fdfdfd;
+  --color-50: #fafafa;
+  --color-100: #f5f5f5;
+  --color-200: #e9eaeb;
+  --color-300: #d5d7da;
+  --color-400: #a4a7ae;
+  --color-500: #717680;
+  --color-600: #535862;
+  --color-700: #414651;
+  --color-800: #252b37;
+  --color-900: #181d27;
+
+  /* ---------- TYPOGRAPHY ---------- */
+
+  /* ===== Headings ===== */
+
+  /* h1 → Display 2xl */
+  --h1-fs: 4rem; /* 64px */
+  --h1-lh: 5.625rem; /* 90px */
+  --h1-ls: -0.02em;
+  --h1-fw: 400;
+
+  /* h2 → Display xl */
+  --h2-fs: 3.75rem; /* 60px */
+  --h2-lh: 4.5rem; /* 72px */
+  --h2-ls: -0.02em;
+  --h2-fw: 400;
+
+  /* h3 → Display lg */
+  --h3-fs: 3rem; /* 48px */
+  --h3-lh: 3.75rem; /* 60px */
+  --h3-ls: -0.02em;
+  --h3-fw: 400;
+
+  /* h4 → Display md */
+  --h4-fs: 2.25rem; /* 36px */
+  --h4-lh: 3rem; /* 48px */
+  --h4-ls: -0.02em;
+  --h4-fw: 400;
+
+  /* h5 → Display sm */
+  --h5-fs: 1.875rem; /* 30px */
+  --h5-lh: 2.375rem; /* 38px */
+  --h5-ls: -0.02em;
+  --h5-fw: 400;
+
+  /* h6 → Display xs */
+  --h6-fs: 1.5rem; /* 24px */
+  --h6-lh: 2rem; /* 32px */
+  --h6-ls: -0.02em;
+  --h6-fw: 400;
+
+  /* ===== Paragraph / Text ===== */
+
+  /* p1 → Text xl */
+  --p1-fs: 1.25rem; /* 20px */
+  --p1-lh: 1.875rem; /* 30px */
+  --p1-ls: 0em;
+  --p1-fw: 400;
+
+  /* p2 → Text lg / Body */
+  --p2-fs: 1.125rem; /* 18px */
+  --p2-lh: 1.75rem; /* 28px */
+  --p2-ls: 0em;
+  --p2-fw: 400;
+
+  /* p3 → Text md */
+  --p3-fs: 1rem; /* 16px */
+  --p3-lh: 1.5rem; /* 24px */
+  --p3-ls: 0em;
+  --p3-fw: 400;
+
+  /* p4 → Text sm */
+  --p4-fs: 0.875rem; /* 14px */
+  --p4-lh: 1.25rem; /* 20px */
+  --p4-ls: 0em;
+  --p4-fw: 400;
+
+  /* p5 → Text xs */
+  --p5-fs: 0.75rem; /* 12px */
+  --p5-lh: 1.125rem; /* 18px */
+  --p5-ls: 0em;
+  --p5-fw: 400;
+
+  /* ---------- TYPOGRAPHY ---------- */
+
+  --breakpoint-*: initial;
+  --breakpoint-mobile: 0;
+  --breakpoint-tablet: 48rem;
+  --breakpoint-desktop: 80rem;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("/fonts/Inter-Variable.woff2") format("woff2");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@layer utilities {
+  .cv11 {
+    font-feature-settings: "cv11" 1 !important;
+  }
 }
 
 /*
@@ -29,17 +143,37 @@
   }
 }
 
+:root {
+  font-family: Inter, sans-serif;
+  font-feature-settings: "liga" 1, "calt" 1, "cv11" 1;
+}
+
+@supports (font-variation-settings: normal) {
+  :root {
+    font-family: InterVariable, sans-serif;
+    font-feature-settings: "liga" 1, "calt" 1, "cv11" 1;
+  }
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-family: InterVariable, sans-serif;
+  font-feature-settings: "liga" 1, "calt" 1, "cv11" 1, "ss01" 1;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: InterVariable, sans-serif;
+  font-feature-settings: "liga" 1, "calt" 1, "cv11" 1, "ss01" 1;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
 }
-
