--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -1,3 +1,80 @@
 .border {
   border: 1px solid black;
 }
+
+.h1 {
+  font-size: var(--h1-fs);
+  line-height: var(--h1-lh);
+  letter-spacing: var(--h1-ls);
+  font-weight: var(--h1-fw);
+}
+
+.h2 {
+  font-size: var(--h2-fs);
+  line-height: var(--h2-lh);
+  letter-spacing: var(--h2-ls);
+  font-weight: var(--h2-fw);
+}
+
+.h3 {
+  font-size: var(--h3-fs);
+  line-height: var(--h3-lh);
+  letter-spacing: var(--h3-ls);
+  font-weight: var(--h3-fw);
+}
+
+.h4 {
+  font-size: var(--h4-fs);
+  line-height: var(--h4-lh);
+  letter-spacing: var(--h4-ls);
+  font-weight: var(--h4-fw);
+}
+
+.h5 {
+  font-size: var(--h5-fs);
+  line-height: var(--h5-lh);
+  letter-spacing: var(--h5-ls);
+  font-weight: var(--h5-fw);
+}
+
+.h6 {
+  font-size: var(--h6-fs);
+  line-height: var(--h6-lh);
+  letter-spacing: var(--h6-ls);
+  font-weight: var(--h6-fw);
+}
+
+.p1 {
+  font-size: var(--p1-fs);
+  line-height: var(--p1-lh);
+  letter-spacing: var(--p1-ls);
+  font-weight: var(--p1-fw);
+}
+
+.p2 {
+  font-size: var(--p2-fs);
+  line-height: var(--p2-lh);
+  letter-spacing: var(--p2-ls);
+  font-weight: var(--p2-fw);
+}
+
+.p3 {
+  font-size: var(--p3-fs);
+  line-height: var(--p3-lh);
+  letter-spacing: var(--p3-ls);
+  font-weight: var(--p3-fw);
+}
+
+.p4 {
+  font-size: var(--p4-fs);
+  line-height: var(--p4-lh);
+  letter-spacing: var(--p4-ls);
+  font-weight: var(--p4-fw);
+}
+
+.p5 {
+  font-size: var(--p5-fs);
+  line-height: var(--p5-lh);
+  letter-spacing: var(--p5-ls);
+  font-weight: var(--p5-fw);
+}
