--- a/src/components/progress-counter/progress-counter.module.scss
+++ b/src/components/progress-counter/progress-counter.module.scss
@@ -7,15 +7,15 @@
 
 .progress {
   width: 100%;
-  height: 20px;
-  background: #e5e7eb;
-  //   border-radius: 999px;
+  height: 10px;
+  border-radius: 999px;
   overflow: hidden;
+  border: 1px solid black;
 }
 
 .progress-fill {
   height: 100%;
-  background: #2563eb;
+  opacity: 0.85;
   transform-origin: left;
   transform: scaleX(0);
   transition: transform 800ms ease-out;
