--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -155,3 +155,7 @@ a.active .nav-text {
 .displayContainer {
   min-height: calc(100vh - 120px);
 }
+
+.workContainer {
+  height: calc(100vh - 120px);
+}
