--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -1,3 +1,5 @@
+@use "./mixins" as mixins;
+
 .h1 {
   font-size: var(--h1-fs);
   line-height: var(--h1-lh);
@@ -153,9 +155,13 @@ a.active .nav-text {
 }
 
 .displayContainer {
-  min-height: calc(100vh - 120px);
-}
+  min-height: calc(100vh - 96px);
 
-.workContainer {
-  height: calc(100vh - 120px);
+  @include mixins.tablet {
+    min-height: calc(100vh - 108px);
+  }
+
+  @include mixins.desktop {
+    min-height: calc(100vh - 120px);
+  }
 }
