compContainer and home layout fix

--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -167,3 +167,8 @@ a.active .nav-text {
     max-height: calc(100vh - 120px);
   }
 }
+
+.compContainer {
+  padding-top: 80px;
+  padding-bottom: 40px;
+}
